(rails-41) upgrade gems and test application

--- a/spec/dummy/app/views/widget_host/index.html.erb
+++ b/spec/dummy/app/views/widget_host/index.html.erb
@@ -4,7 +4,7 @@
      data-csr_id="<%= params['csr-id'] || 1000 %>"
      data-agent_name="<%= params['agent-name'] || "Some Agent" %>"
      data-agent_phone_number="<%= params['agent-number'] || "5555551234" %>"
-     data-agent_phone_type="<%= params['agent-phone-type'] || "phone" %>"
+     data-agent_phone_type="<%= params['agent-phone-type'] || "twilio_client" %>"
      data-csr_type="<%= params['agent-csr-type'] %>"
      data-agent_default_status="<%= params['agent-default-status'] %>"
      data-agent_phone_ext="<%= params['agent-ext'] %>"
